fix: IE: link was not wrapping

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -567,7 +567,7 @@ ul, li {
         @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
           /* IE10+ CSS1.1 here */
           word-break: break-word;
-          max-width: 100%;
+          max-width: 100%;//originally 90%
         }
         margin-bottom: 8px;
         //display: inline-block;
@@ -831,6 +831,12 @@ ul, li {
     //color: var(--color-brand);
     @include var(color, color-brand); //hello
     text-decoration: none;
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+      /* IE10+ CSS1.1 here */
+      //word-break: break-all;
+      display: block;
+      word-break: break-all;
+    }
 
     &:hover {
       cursor: pointer;
